# whereat

./: ADVANCED.md  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEEDBACK.md  README.md  TODO-split.md  TODO.md  justfile
.github/workflows/: ci.yml
benches/: at_depth.rs  inline_first.rs  nested_loops.rs  overhead.rs
docs/: BENCHMARK.md  DEREF.md
errat-derive/: Cargo.toml
errat-derive/src/: lib.rs
examples/: anyhow_thiserror.rs  backtrace_frame_count.rs  chained_fn_name.rs  derive_macro.rs  display_quality.rs  error_meta.rs  frames_10.rs  frames_25.rs  frames_3.rs  frames_40.rs  function_names.rs  patterns.rs  pretty_output.rs  stack_trace.rs  trace_comparison.rs  use_cases.rs
src/: at.rs  context.rs  crate_info.rs  ext.rs  format.rs  inline_vec.rs  lib.rs  prelude.rs  tests.rs  trace.rs
test-crates/fake-dep/: Cargo.toml
test-crates/fake-dep/src/: lib.rs
tests/: crate_info.rs  cross_crate.rs  error_ergonomics.rs  frame_surgery.rs  output_format.rs  worst_cases.rs
