[package]
name = "errat"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Lightweight error location tracking with small sizeof and no_std support"
keywords = ["error", "trace", "stacktrace", "track_caller", "no_std"]
categories = ["rust-patterns", "no-std"]

[features]
default = []
# Use tinyvec with 3 inline slots (sizeof(Trace) = 64 bytes, spills to heap)
tinyvec-64-bytes = ["dep:tinyvec"]
# Use tinyvec with 11 inline slots (sizeof(Trace) = 128 bytes, spills to heap)
tinyvec-128-bytes = ["dep:tinyvec"]
# Use tinyvec with 27 inline slots (sizeof(Trace) = 256 bytes, spills to heap)
tinyvec-256-bytes = ["dep:tinyvec"]

[dependencies]
tinyvec = { version = "1.9", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
static_assertions = "1.1"

[lints.rust]
unsafe_code = "deny"
