[package]
name = "errat"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Lightweight error location tracking with small sizeof and no_std support"
repository = "https://github.com/imazen/errat"
keywords = ["error", "trace", "stacktrace", "track_caller", "no_std"]
categories = ["rust-patterns", "no-std"]

[features]
default = []
# Use tinyvec with 3 inline slots (sizeof(Trace) = 64 bytes, spills to heap)
tinyvec-64-bytes = ["dep:tinyvec"]
# Use tinyvec with 11 inline slots (sizeof(Trace) = 128 bytes, spills to heap)
tinyvec-128-bytes = ["dep:tinyvec"]
# Use tinyvec with 27 inline slots (sizeof(Trace) = 256 bytes, spills to heap)
tinyvec-256-bytes = ["dep:tinyvec"]
# Use tinyvec with 60 inline slots (sizeof(Trace) = 512 bytes, spills to heap)
tinyvec-512-bytes = ["dep:tinyvec"]
# Use smallvec with 12 inline slots (same as tinyvec-128-bytes for comparison)
smallvec-128-bytes = ["dep:smallvec"]
# Use smallvec with 28 inline slots (same as tinyvec-256-bytes for comparison)
smallvec-256-bytes = ["dep:smallvec"]

[dependencies]
tinyvec = { version = "1.9", optional = true, default-features = false, features = ["alloc"] }
smallvec = { version = "1.13", optional = true, default-features = false }

[dev-dependencies]
static_assertions = "1.1"
criterion = { version = "0.5", features = ["html_reports"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
backtrace = "0.3"

[[bench]]
name = "overhead"
harness = false

[[bench]]
name = "nested_loops"
harness = false

[lints.rust]
unsafe_code = "deny"
