[workspace]
members = [".", "test-crates/fake-dep"]

[package]
name = "whereat"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Lightweight error location tracking with small sizeof and no_std support"
repository = "https://github.com/lilith/whereat"
keywords = ["error", "trace", "stacktrace", "track_caller", "no_std"]
categories = ["rust-patterns", "no-std"]

[features]
default = []
std = []
# Internal/unstable features - prefixed with _ to indicate not part of public API
_tinyvec-64-bytes = ["dep:tinyvec"]
_tinyvec-128-bytes = ["dep:tinyvec"]
_tinyvec-256-bytes = ["dep:tinyvec"]
_tinyvec-512-bytes = ["dep:tinyvec"]
_smallvec-128-bytes = ["dep:smallvec"]
_smallvec-256-bytes = ["dep:smallvec"]
_termcolor = ["dep:owo-colors"]
_html = []

[dependencies]
tinyvec = { version = "1.9", optional = true, default-features = false, features = ["alloc"] }
smallvec = { version = "1.13", optional = true, default-features = false, features = ["const_generics"] }
owo-colors = { version = "4.2", optional = true, default-features = false }

[dev-dependencies]
static_assertions = "1.1"
criterion = { version = "0.8", features = ["html_reports"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
backtrace = "0.3"
fake-dep = { path = "test-crates/fake-dep" }

[[bench]]
name = "overhead"
harness = false

[[bench]]
name = "nested_loops"
harness = false

[[bench]]
name = "inline_first"
harness = false

[[bench]]
name = "at_depth"
harness = false

[lints.rust]
unsafe_code = "deny"
